[package]

name = "rustos5"
version = "0.0.1"
authors = ["Philipp Oppermann <philipp.oppermann@student.kit.edu>"]

[lib]
name = "rustos5"
crate-type = ["staticlib"]

[dependencies.rlibc]
git = "https://github.com/rust-lang/rlibc.git"

[dependencies.os_collections]
git = "https://PhilippOppermann@bitbucket.org/PhilippOppermann/os_collections.git"

[dependencies.os_alloc]
git = "https://PhilippOppermann@bitbucket.org/PhilippOppermann/os_alloc.git"

[dependencies.spinlock]
git = "https://github.com/mvdnes/spinlock-rs.git"