[package]

name = "rustos"
version = "0.0.1"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]

[lib]
name = "rustos"
crate-type = ["staticlib"]

[dependencies.rlibc]
git = "https://github.com/rust-lang/rlibc.git"

[dependencies.os_std]
git = "https://PhilippOppermann@bitbucket.org/PhilippOppermann/os_std.git"

[dependencies.os_alloc]
git = "https://PhilippOppermann@bitbucket.org/PhilippOppermann/os_alloc.git"