[package]

name = "rustos"
version = "0.0.1"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]

[lib]
name = "rustos"
crate-type = ["staticlib"]

[dependencies.std]
path = "lib/libstd"

[dependencies.scheduler]
path = "lib/scheduler"

[target.x86_64-unknown-linux-gnu.dependencies.frame_stack]
path = "arch/x86_64/frame_stack"

[dependencies.spinlock]
git = "https://github.com/phil-opp/spinlock-rs.git"
branch = "try_lock"