[package]

name = "std"
version = "0.0.1"
authors = ["Philipp Oppermann <dev@phil-opp.com>"]

[dependencies.rlibc]
git = "https://github.com/rust-lang/rlibc.git"

[dependencies.alloc]
path = "../liballoc"
default-features = false
features = ["external_crate"]

[dependencies.collections]
path = "../libcollections"
